--- a/index.html
+++ b/index.html
@@ -1,2 +1,65 @@
-111
-222
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirect Button with Log</title>
+    <style>
+        #log {
+            border: 1px solid #ccc;
+            padding: 10px;
+            max-height: 200px;
+            overflow-y: auto;
+            margin-top: 20px;
+        }
+        .log-entry {
+            margin-bottom: 5px;
+            font-family: Arial, sans-serif;
+            font-size: 0.9em;
+        }
+        .log-datetime {
+            color: #888;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <button onclick="redirectToShopee1()">Go to Shopee 1</button>
+    <button onclick="redirectToShopee2()">Go to Shopee 2</button>
+
+    <div id="log"></div>
+
+    <script>
+        function log(message) {
+            const logDiv = document.getElementById('log');
+            const logEntry = document.createElement('div');
+            logEntry.classList.add('log-entry');
+            
+            const dateTime = new Date().toLocaleString();
+            logEntry.innerHTML = `<span class="log-datetime">[${dateTime}]</span> ${message}`;
+            
+            logDiv.prepend(logEntry);  // Prepend to show the latest log at the top
+        }
+
+        function redirectToShopee1() {
+            log("1 Starting redirect to Shopee...");
+            try {
+                window.location.href = "shopeeid://reactPath?navigate_url=https%3A%2F%2Fuat.shopee.co.id%2Fproduct%2F220615538%2F801873931%3Fuls_trackid%3D51491mvh00ko%26user_agent%3DTW96aWxsYS81LjAgKExpbnV4OyBBbmRyb2lkIDYuMDsgTmV4dXMgNSBCdWlsZC9NUkE1OE4pIEFwcGxlV2ViS2l0LzUzNy4zNiAoS0hUTUwsIGxpa2UgR2Vja28pIENocm9tZS8xMjkuMC4wLjAgTW9iaWxlIFNhZmFyaS81MzcuMzY%253D%26utm_campaign%3Did_ozZaNV7EVV%26utm_content%3D----%26utm_medium%3Daffiliates%26utm_source%3Dan_11137400000%26utm_term%3Dbzk1ipsmzveb&path=shopee%2FTRANSFER_PAGE&tab=buy&uls_trackid=51491mvh00ko&use_deeplink=1&utm_campaign=id_ozZaNV7EVV&utm_content=----&utm_medium=affiliates&utm_source=an_11137400000&utm_term=bzk1ipsmzveb&version=1";
+                log("1 Redirect triggered successfully.");
+            } catch (error) {
+                log(`1 Error occurred: ${error.message}`);
+            }
+        }
+
+        function redirectToShopee2() {
+            log("2 Starting redirect to Shopee...");
+            try {
+                window.location.href = "intent://reactPath?navigate_url=https%3A%2F%2Fuat.shopee.co.id%2Fproduct%2F220615538%2F801873931%3Fuls_trackid%3D51491mvh00ko%26user_agent%3DTW96aWxsYS81LjAgKExpbnV4OyBBbmRyb2lkIDYuMDsgTmV4dXMgNSBCdWlsZC9NUkE1OE4pIEFwcGxlV2ViS2l0LzUzNy4zNiAoS0hUTUwsIGxpa2UgR2Vja28pIENocm9tZS8xMjkuMC4wLjAgTW9iaWxlIFNhZmFyaS81MzcuMzY%253D%26utm_campaign%3Did_ozZaNV7EVV%26utm_content%3D----%26utm_medium%3Daffiliates%26utm_source%3Dan_11137400000%26utm_term%3Dbzk1ipsmzveb&path=shopee%2FTRANSFER_PAGE&tab=buy&uls_trackid=51491mvh00ko&use_deeplink=1&utm_campaign=id_ozZaNV7EVV&utm_content=----&utm_medium=affiliates&utm_source=an_11137400000&utm_term=bzk1ipsmzveb&version=1#Intent;scheme=shopeeid;end;"
+                log("2 Redirect triggered successfully.");
+            } catch (error) {
+                log(`2 Error occurred: ${error.message}`);
+            }
+        }
+    </script>
+</body>
+</html>
