--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
     <button onclick="redirectToShopee1()">Go to Shopee 1</button>
     <button onclick="redirectToShopee2()">Go to Shopee 2</button>
+    <button onclick="redirectTolazada3()">Go to Shopee 3</button>
 
     <div id="log"></div>
 
@@ -52,12 +53,22 @@
         }
 
         function redirectToShopee2() {
-            log("2 Starting redirect to Shopee...");
+            log("2 Starting redirect to Shopee (intent)...");
             try {
                 window.location.href = "intent://reactPath?navigate_url=https%3A%2F%2Fuat.shopee.co.id%2Fproduct%2F220615538%2F801873931%3Fuls_trackid%3D51491mvh00ko%26user_agent%3DTW96aWxsYS81LjAgKExpbnV4OyBBbmRyb2lkIDYuMDsgTmV4dXMgNSBCdWlsZC9NUkE1OE4pIEFwcGxlV2ViS2l0LzUzNy4zNiAoS0hUTUwsIGxpa2UgR2Vja28pIENocm9tZS8xMjkuMC4wLjAgTW9iaWxlIFNhZmFyaS81MzcuMzY%253D%26utm_campaign%3Did_ozZaNV7EVV%26utm_content%3D----%26utm_medium%3Daffiliates%26utm_source%3Dan_11137400000%26utm_term%3Dbzk1ipsmzveb&path=shopee%2FTRANSFER_PAGE&tab=buy&uls_trackid=51491mvh00ko&use_deeplink=1&utm_campaign=id_ozZaNV7EVV&utm_content=----&utm_medium=affiliates&utm_source=an_11137400000&utm_term=bzk1ipsmzveb&version=1#Intent;scheme=shopeeid;end;"
                 log("2 Redirect triggered successfully.");
             } catch (error) {
                 log(`2 Error occurred: ${error.message}`);
+            }
+        }
+
+        function redirectTolazada3() {
+            log("3 Starting redirect to lazada...");
+            try {
+                window.location.href = "lazada://sg/d?itemId=3214302700&skuId=21808485816&from_msite=1&dsource=smb&autoOpen=true&disableSmb=false&extSceneId=smbv1&dauto=1&dfrom=pdp&deviceType=iOS&omflag=exlaz&browser=safari&exlaz=e_Fapm5gC5ob7Gip8qo24MCfU%2BqLKrZhcYGDvOTyVyVRDCXvTKdNAtBWrJB3e%2FN46Ydp7bFSTDMdxr8GpYT8dO0DcZorIE3A1OD3WnASIas1Y%3D&exlazCookie=c_lzd_byr%3Amm_150030967_51552045_2010552051!sg1245004%3Aclkgg5v301i8u4oie1mcoe%3A%3A&laz_share_info=1365244061_0_100_0_1365246061_null"
+                log("3 Redirect triggered successfully.");
+            } catch (error) {
+                log(`3 Error occurred: ${error.message}`);
             }
         }
     </script>
