--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
     <button onclick="redirectToShopee1()">Go to Shopee 1</button>
-    <button onclick="redirectToShopee2()">Go to Shopee 2</button>
-    <button onclick="redirectTolazada3()">Go to Shopee 3</button>
+    <button onclick="redirectToShopee2()">Go to Shopee 2 (intent)</button>
+    <button onclick="redirectTolazada3()">Go to Lazada 3</button>
 
     <div id="log"></div>
 
